--- a/src/index.scss
+++ b/src/index.scss
@@ -41,20 +41,66 @@ h3,p{margin: 0;}
   
 
 
-.button{
-background: #FFFFFF;
-border: 1px solid #F2F2F2;
-border-radius: 8px;
-box-sizing: border-box;
-height: 32px;
-width: 32px;
-cursor: pointer;
+// .button{
+// background: #FFFFFF;
+// border: 1px solid #F2F2F2;
+// border-radius: 8px;
+// box-sizing: border-box;
+// height: 32px;
+// width: 32px;
+// cursor: pointer;
+// }
+
+
+.cartEmpty{
+  // text-align: center;
+
+  p{
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton
+  {
+    width: 245px;
+    margin-top: 20px;
+    height: 55px;
+    background: #9dd558;
+    border-radius: 18px;
+    border: 0;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+
+   &:hover{
+    img{
+      transform: rotate(180deg) translateX(3px);
+    }
+   } 
+   img{
+    position: relative;
+    top: 1px;
+    transform:rotate(180deg) ;
+    margin-right: 15px;
+    transition: transform 0.15 ease-in-out;
+   }
+}
 }
 
 .search-block{
   border:1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+  .clear{
+    position: absolute;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    top: 13px;
+    right: 15px;
+  }
 
   input{
     border: 0;
