--- a/src/index.scss
+++ b/src/index.scss
@@ -40,18 +40,6 @@ h3,p{margin: 0;}
 }
   
 
-
-// .button{
-// background: #FFFFFF;
-// border: 1px solid #F2F2F2;
-// border-radius: 8px;
-// box-sizing: border-box;
-// height: 32px;
-// width: 32px;
-// cursor: pointer;
-// }
-
-
 .cartEmpty{
   // text-align: center;
 
@@ -72,6 +60,12 @@ h3,p{margin: 0;}
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
+
+    &:disabled{
+      background-color: #bebebe !important;
+      cursor:default;
+    }
+
 
    &:hover{
     img{
@@ -141,20 +135,14 @@ h3,p{margin: 0;}
     overflow: auto;
     margin-bottom: 40px;
   }
-
-
   .items{
   flex: 1;
 }
-  
 }
 h2{
   margin: 0;
-
 }
 .cartTotalBlock{
- 
- 
   ul{
     display: block;
     margin-bottom: 40px !important;
@@ -170,16 +158,16 @@ h2{
         position:relative;
         top: -4px;
         margin: 0 7px;
-  
       }
-  
     }
-
     }
-
     .greenButton{
       position: relative;
-
+      
+      &:disabled{
+        animation:button-loading 0.6s ease-in-out infinite;
+      }
+    
       &:hover{
         img{
           transform: translateX(5px);
@@ -195,7 +183,6 @@ h2{
   }
 
 .greenButton{
- 
     width: 100%;
     height: 55px;
     background: #9dd558;
@@ -207,8 +194,6 @@ h2{
     cursor: pointer;
     transition: background 0.2 ease-in-out;
 
-    
-
     &:hover{
       background: lighten(#9dd558,5% );
     }
@@ -218,10 +203,7 @@ h2{
     }
 
     }
-  
-
 }
-
 .cartItem{
   border: 1px solid #f3f3f3;
   border-radius: 20px;
@@ -258,3 +240,14 @@ h2{
   }
 }
 
+@keyframes button-loading{
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: 0.7;
+  }
+  100%{
+    opacity: 1;
+  }
+}
